--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
   <div class="container">
     <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif" class="cute-gif">
-    <h2>sorry kagabi bati na ba tayo?? 🥺</h2>
+    <h2>This meyd bai yur teto kinetss</h2>
     <div class="buttons">
       <!-- YES opens in a new tab -->
       <a href="yes.html" target="_self" rel="noopener noreferrer">
-        <button id="yesBtn">Yes 💖</button>
+        <button id="yesBtn">upen et 💖</button>
       </a>
-      <button id="noBtn">No 🙈</button>
     </div>
   </div>
   <script src="script.js"></script>
