--- a/yes.html
+++ b/yes.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>thank youuu 💕🥰</h1>
+    <h1>HEHEHE🥰</h1>
 
     <!-- Video -->
 <video class="cute-video" autoplay loop muted playsinline controls>
-      <source src="kupal.mp4" type="video/mp4">
+      <source src="a.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
