--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif" class="cute-gif">
-    <h2>This meyd bai yur teto kinetss</h2>
+    <h2>Made by your tito</h2>
     <div class="buttons">
       <!-- YES opens in a new tab -->
       <a href="yes.html" target="_self" rel="noopener noreferrer">
@@ -20,3 +20,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
