--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <div class="buttons">
       <!-- YES opens in a new tab -->
       <a href="yes.html" target="_self" rel="noopener noreferrer">
-        <button id="yesBtn">upen et 💖</button>
+        <button id="yesBtn">click here💖</button>
       </a>
     </div>
   </div>
   <script src="script.js"></script>
 </body>
 </html>
+
 
